UN M%AIL DE RESET DE MDP BORDEL JPP JEJO U3FGBEIYhkgbzeuiljkghrjeiol

--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -9,4 +9,5 @@ framework:
 when@prod:
     framework:
         router:
+            default_uri: 'https://127.0.0.1:8000'
             strict_requirements: null
